# Prompt-based-Business-Intelligence-System

./: .env.example  .gitignore  Makefile  Python-BI-System-Architecture.md  README.md  backend.Dockerfile  docker-compose.dev.yml  docker-compose.yml  frontend.Dockerfile  nginx.conf  pyproject.toml
backend/: config.py  dependencies.py  main.py
backend/api/: _helpers.py  auth.py  connections.py  dashboards.py  prompts.py  queries.py  router.py  uploads.py  widgets.py
backend/db/: engine.py  session.py
backend/middleware/: auth.py  error_handler.py  rate_limiter.py
backend/migrations/: env.py
backend/migrations/versions/: 001_initial.py
backend/models/: __init__.py  connection.py  dashboard.py  query_log.py  user.py  widget.py
backend/schemas/: __init__.py  connection.py  dashboard.py  prompt.py  query.py  user.py  widget.py
backend/services/: auth_service.py  cache_service.py  dashboard_service.py  export_service.py  widget_service.py
backend/services/connectors/: __init__.py  _duckdb_mixin.py  base.py  csv_connector.py  excel_connector.py  factory.py  gdrive.py  json_connector.py  mysql.py  postgres.py  sqlite.py
backend/services/prompt_engine/: __init__.py  chart_recommender.py  engine.py  intent_classifier.py  query_generator.py  schema_context.py  widget_builder.py
backend/utils/: encryption.py  helpers.py  sql_validator.py
frontend/: index.html  package-lock.json  package.json  tailwind.config.ts  tsconfig.tsbuildinfo  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/lib/: api.ts  (+2 more)
scripts/: create_demo_user.py  generate_schema.py  seed_demo.py
tests/: conftest.py
tests/e2e/: conftest.py  test_full_system.py
(+44 files in other folders)
